# SPECTRE

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  run_validation.py  validate-submission.sh
agent/: __init__.py  baseline_agent.py
data/processed/: orders_processed_20260407_163621.csv  orders_processed_20260407_174130.csv  orders_processed_20260408_093151.csv  orders_processed_20260408_095410.csv  orders_processed_20260408_103649.csv  orders_processed_20260408_103954.csv
data/raw/: orders_1.csv  orders_2.csv  orders_3.csv
env/: __init__.py  actions.py  environment.py  models.py  pipeline.py  rewards.py  tasks.py
grader/: grader.py
server/: app.py
